<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6f53a2">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:tint="#FD64CB"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/fira_sans_condensed"
        android:text="@string/Task_Creation_Title"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="330dp"
        android:layout_height="274dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn"
        app:layout_constraintVertical_bias="0.81">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColorHint="#9f87ca">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#9985bd"
                android:fontFamily="@font/fira_sans_condensed"
                android:hint="@string/Task_DateHint"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="false"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:focusable="false"
                android:longClickable="false"
                android:clickable="true"
                android:editable="false"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColorHint="#9f87ca"
            app:counterEnabled="true"
            app:counterMaxLength="10">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/timeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#9985bd"
                android:fontFamily="@font/fira_sans_condensed"
                android:hint="@string/Task_TimeHint"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="false"
                android:textColor="#FFF"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColorHint="#9f87ca">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tasknameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9985bd"
                    android:fontFamily="@font/fira_sans_condensed"
                    android:hint="@string/Task_NameHint"
                    android:singleLine="true"
                    android:textColor="#FFF"
                    android:textSize="18sp" />


            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/taskNameVoiceBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_button_background"
                android:src="@android:drawable/ic_btn_speak_now"
                android:tint="#FFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColorHint="#9f87ca">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/descriptonInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9985bd"
                    android:fontFamily="@font/fira_sans_condensed"
                    android:hint="@string/Task_DescriptionHint"
                    android:singleLine="false"
                    android:textColor="#FFF"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/taskDescVoiceBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_button_background"
                android:src="@android:drawable/ic_btn_speak_now"
                android:tint="#FFF" />

        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="330dp"
        android:layout_height="155dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FD64CB"
            android:text="@string/Save_Btn"
            android:textColor="#FFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="56dp"
            android:backgroundTint="#b1b1b1"
            android:text="@string/Cancel_Btn"
            android:textColor="#FFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/saveBtn"
            app:layout_constraintStart_toStartOf="@+id/saveBtn"
            app:layout_constraintTop_toBottomOf="@+id/saveBtn"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>